Silva changes
=============

Silva 2.2 (unreleased)
----------------------

- ...

Silva 2.2b1 (2010-02-01)
------------------------

New Features
~~~~~~~~~~~~

- External Sources are now previewable in kupu.  When an external
  source with preview enabled is added to a document, the rendered
  extneral source is shown in kupu.  When that external source is
  active, or when hovering over it with the mouse, the external source
  will have a different background color, a border, and a 'lock' icon.
  This shows the extent of the external source within the document and
  also provides a hint that it is not editable.

- The reference lookup window formulator widget now supports multiple
  entries with javascript to add / remove entries.  NOTE: the default
  is to retain the old behavior (supporting one reference, for either
  type of lookup field).  If an exsiting lookup window field is
  changed to support more the onclick widget property needs to change.
  Copy the default value from a new lookupwindowfield.

- DateTime widgets in the SMI now have a 'calendar' button which
  opens a popup calendar -- an easier way to supply datetimes.

- fixed formulator lookupwindow widget to support functioning in multi-reference
  mode in a metadata set.

Bugs Fixed
~~~~~~~~~~

- uncommon (but valid) characters were not supported in the LHS
  (mailbox) side of email addresses in mailto: links in Silva objects
  using silvaxml content storage.  An example of an email address that
  did not work: firstname.o'surname@beds.ac.uk .  The link regexp was
  expanded to allow the full range of characters in the mailbox as
  specified in RFC 2822#3.4.1.

- In kupu, when an active external source (i.e. the external source tool is
  showing that ES's parameters), clicking on the same ES no longer causes
  the tool to reload (no more flicker)

- Errors when attempting to upload interlaced PNGs are now caught and
  displayed to the user.
