@@ -122,52 +122,3 @@ class SwitchClass(object):
 
     def __repr__(self):
         return "<SwitchClass %r>" % self.new_class
-
-
-#make a container_filter.  See doc/developer_changes for more info
-# basically, this returns a closure that can be used for a container filter
-# for a content type during product registration.  This closure then
-# knows whether the particular content type should be available in
-# the zmi add list, whether it should only be visible outside
-# of Silva (e.g. the silva root), and the container filter contains
-# an extended parameter list to control whether to use the
-# lexically-scoped zmi_addable variable when called
-def makeContainerFilter(zmi_addable=True, only_outside_silva=False):
-    def SilvaZCMLContainerFilter(object_manager, filter_addable=False):
-        if filter_addable and not zmi_addable: return False;
-        if only_outside_silva:
-            if not interfaces.ISilvaObject.providedBy(object_manager):
-                return True
-            return False
-        else:
-            if interfaces.ISilvaObject.providedBy(object_manager):
-                return True
-            return False
-    return SilvaZCMLContainerFilter
-
-
-def makeZMIFilter(content, zmi_addable=True, only_outside_silva=False):
-    def SilvaZMIFilter(object_manager, filter_addable=False):
-        if filter_addable and not zmi_addable:
-            return False
-        addable = False
-        if ISite.providedBy(object_manager) and \
-                interfaces.ISilvaLocalService.implementedBy(content):
-            # Services in  sites
-            addable = True
-        elif interfaces.IContainer.providedBy(object_manager):
-            if interfaces.ISilvaObject.implementedBy(content) or \
-                    (interfaces.IZMIObject.implementedBy(content) and \
-                     not interfaces.ISilvaService.implementedBy(content)):
-                # Silva and ZMI content in Silva objects
-                addable = True
-        elif interfaces.IVersionedContent.providedBy(object_manager) and \
-                interfaces.IVersion.implementedBy(content):
-                # Let version been added in a versionned
-                # object. Should match the correct version of course ...
-                addable = True
-        if only_outside_silva or interfaces.IRoot.implementedBy(content):
-            return not addable
-        return addable
-    return SilvaZMIFilter
-
