@@ -4,8 +4,10 @@ Silva changes
 Silva 2.2 (unreleased)
 ----------------------
 
-- ...
-
+- deprecate Products.Silva.helpers.makeContainerFilter and makeZMIFilter
+  (makeZMIFilter was moved to silva.core.conf.utils).  Fix signature checking
+  in Folder.filtered_meta_types.
+  
 Silva 2.2b1 (2010-02-01)
 ------------------------
 
